--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,12 @@ dt %>%
 ```{r table2}
 dt %>%
   kbl(caption = "Recreating booktabs style table") %>%
-  kable_classic(full_width = F, html_font = "Cambria")
+  kable_paper() %>%
+  kable_styling(bootstrap_options = c("striped", "condensed"),
+                full_width = F, html_font = "Cambria",
+                fixed_thead = T) %>%
+  column_spec(1, bold = T, border_right = T) %>%
+  column_spec(4, background = "yellow")
 ```
 
 ## PRova3
@@ -44,7 +49,19 @@ La piu bella e \@ref(tab:table2).
 ```{r test}
 source("protocols/_main.R")
 
+reac <- 10
 pcr %>%
-	kbl(caption = "Recreating booktabs style table") %>%
-	kable_minimal()
+  mutate(VolumeFinal = VolumeInit * reac) %>%
+  add_row(Reagents = "Total", InitialConcetration = NA,
+          VolumeInit = sum(pcr$VolumeInit), VolumeFinal = sum(pcr$VolumeFinal)) %>%
+  kbl(caption = str_glue("PCR mix for {reac} samples")) %>%
+  kable_paper() %>%
+  kable_styling(bootstrap_options = c("striped", "condensed"),
+                full_width = F, html_font = "Cambria",
+                fixed_thead = T) %>%
+  column_spec(1, bold = T, border_right = T) %>%
+  column_spec(4, background = "yellow") %>%
+  pack_rows("Not add to the mix", 6, 6)
 ```
+
+
