--- a/index.Rmd
+++ b/index.Rmd
@@ -13,55 +13,10 @@ github-repo: mchiapello/2022-UNITO-Labbook
 
 # Preface
 
-## Prova 1
-```{r table1}
-library(kableExtra)
-dt <- mtcars[1:5, 1:6]
+Quaderno di laboratorio di Marco Chiapello.
 
-dt %>%
-      kbl(caption = "Recreating booktabs style table") %>%
-        kable_styling()
-```
+Assegno di ricerca di un anno al Dipartimento di Scienze della Vita e Biologia dei Sistemi, Università degli Studi di Torino, dal 1 dicembre 2021 al 30 novembre 2022.
 
-## PRova2
-
-```{r table2}
-dt %>%
-  kbl(caption = "Recreating booktabs style table") %>%
-  kable_paper() %>%
-  kable_styling(bootstrap_options = c("striped", "condensed"),
-                full_width = F, html_font = "Cambria",
-                fixed_thead = T) %>%
-  column_spec(1, bold = T, border_right = T) %>%
-  column_spec(4, background = "yellow")
-```
-
-## PRova3
-```{r table3}
-dt %>%
-  kbl(caption = "Recreating booktabs style table") %>%
-  kable_minimal()
-```
-
-La piu bella e \@ref(tab:table2).
-
-
-```{r test}
-source("protocols/_main.R")
-
-reac <- 10
-pcr %>%
-  mutate(VolumeFinal = VolumeInit * reac) %>%
-  add_row(Reagents = "Total", InitialConcetration = NA,
-          VolumeInit = sum(pcr$VolumeInit), VolumeFinal = sum(pcr$VolumeFinal)) %>%
-  kbl(caption = str_glue("PCR mix for {reac} samples")) %>%
-  kable_paper() %>%
-  kable_styling(bootstrap_options = c("striped", "condensed"),
-                full_width = F, html_font = "Cambria",
-                fixed_thead = T) %>%
-  column_spec(1, bold = T, border_right = T) %>%
-  column_spec(4, background = "yellow") %>%
-  pack_rows("Not add to the mix", 6, 6)
-```
+Titolo del progetto: **Mechanisms of gene regulation during the ericoid endomycorrhizal interaction**
 
 
