--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,5 @@ Quaderno di laboratorio di Marco Chiapello.
 
 Assegno di ricerca di un anno al Dipartimento di Scienze della Vita e Biologia dei Sistemi, Università degli Studi di Torino, dal 1 dicembre 2021 al 30 novembre 2022.
 
-Titolo del progetto: **Mechanisms of gene regulation during the ericoid endomycorrhizal interaction**
-
+![](images/Unito-logo.png)
 
