--- a/01-heavyMetals.Rmd
+++ b/01-heavyMetals.Rmd
@@ -35,3 +35,9 @@ Procederemo comunque alla filtrazione dei miceli che potremo poi usare come prov
 Di tutte le beute una sola era contaminata!
 
 Molte delle piastre lasciate in camera di crescita erano invece contaminate da acari (lasciano dei percorsi sulle piastre). Erano contaminate anche delle piastre chiuse. 
+
+## 20220121 {#D20220121}
+
+Pulizia laboratorio.
+
+Contattare Chiara per la prossima settimana.
