--- a/book.bib
+++ b/book.bib
@@ -1,10 +1,37 @@
-@Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {http://yihui.name/knitr/},
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for marco at 2022-01-27 09:53:28 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{KHOUJA20141,
+	author = {Khouja, H.R. and Daghino, S. and Abb{\`a}, S. and Boutaraa, F. and Chalot, M. and Blaudez, D. and Martino, E. and Perotto, S.},
+	date-added = {2022-01-27 09:53:19 +0100},
+	date-modified = {2022-01-27 09:53:19 +0100},
+	doi = {https://doi.org/10.1016/j.fgb.2014.08.003},
+	issn = {1087-1845},
+	journal = {Fungal Genetics and Biology},
+	keywords = {Nitrogen metabolism, Heavy metal tolerance, Mycorrhizal fungi, Insertional mutagenesis, Glutamate synthase, Glutamine synthetase},
+	pages = {1-8},
+	title = {OmGOGAT-disruption in the ericoid mycorrhizal fungus Oidiodendron maius induces reorganization of the N pathway and reduces tolerance to heavy-metals},
+	url = {https://www.sciencedirect.com/science/article/pii/S1087184514001388},
+	volume = {71},
+	year = {2014},
+	abstract = {Mycorrhizal fungi are key mediators of soil-to-plant movement of mineral nutrients, including essential and non-essential metals. In soil conditions that facilitate mobilization of metal ions, potentially toxic metals can interfere with nitrogen metabolism in both plants and microorganisms. Less is known about possible relationships between nitrogen metabolism and responses to heavy metals. Aim of this study was to investigate this aspect in the ericoid mycorrhizal fungus Oidiodendron maius strain Zn, a metal tolerant ascomycete. Growth of O. maius Zn on zinc and cadmium containing media was significantly affected by the nitrogen source. Screening of a library of O. maius Zn random genetic transformants for sensitivity to heavy metals (zinc and cadmium) and oxidative stress (menadione) yielded a mutant strain that carried a partial deletion of the glutamate synthase (NADH-GOGAT EC 1.4.1.14) gene and its adjacent gene, the APC15 subunit of the anaphase promoting complex. Comparison of WT and OmGOGAT-OmAPC15 mutant strains indicated an impaired N-metabolism and altered stress tolerance, and assays on the OmAPC15-recomplemented strains ascribed the observed phenotypes to the deletion in the OmGOGAT gene. OmGOGAT disruption modified the nitrogen pathway, with a strong reduction of the associated glutamine synthetase (GS, EC 6.3.1.2) activity and an up-regulation of the alternative NADP-glutamate dehydrogenase (NADP-GDH, EC 1.4.1.4) pathway for glutamate biosynthesis. Unless they were supplemented with glutamine, O. maius Zn transformants lacking OmGOGAT were very sensitive to zinc. These results highlight the importance of nitrogen metabolism not only for nitrogen assimilation and transformation, but also for stress tolerance. For mycorrhizal fungi, such as O. maius, this may bear consequences not only to the fungus, but also to the host plant.},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S1087184514001388},
+	bdsk-url-2 = {https://doi.org/10.1016/j.fgb.2014.08.003}}
+
+@book{xie2015,
+	address = {Boca Raton, Florida},
+	author = {Xie, Yihui},
+	edition = {2nd},
+	note = {ISBN 978-1498716963},
+	publisher = {Chapman and Hall/CRC},
+	title = {Dynamic Documents with {R} and knitr},
+	url = {http://yihui.name/knitr/},
+	year = {2015},
+	bdsk-url-1 = {http://yihui.name/knitr/}}
