--- a/02-PKS.Rmd
+++ b/02-PKS.Rmd
@@ -3,3 +3,11 @@
 ## 20220119 
 
 Lettura relazione finale di Simone Belmondo [download](Documents/Relazione_finale_Simone_Belmondo.pdf)
+
+## 20220218 {#D20220218}
+
+### Riunione con Simone
+
+Realizzato poco, aspettare che Simone carichi i dati e contatti Ekaterina. 
+
+Capire poi con lei se rifare la figura con una lista di PKS più aggiornata.
