--- a/_main.tex
+++ b/_main.tex
@@ -84,7 +84,7 @@
 
 \title{Labbook}
 \author{Marco Chiapello}
-\date{Last update: 2022-02-04}
+\date{Last update: 2022-02-21}
 
 \begin{document}
 \maketitle
@@ -542,6 +542,100 @@ Worked on PKS paper
 Worked on PKS paper
 
 Visita la server del politecnico
+
+\hypertarget{D20220207}{%
+\section{20220207}\label{D20220207}}
+
+\hypertarget{test-estrazione-rna-chiara-de-filippis-e-miriana-bortolot}{%
+\subsection{Test estrazione RNA (Chiara De Filippis e Miriana Bortolot)}\label{test-estrazione-rna-chiara-de-filippis-e-miriana-bortolot}}
+
+Preparare 12 campioni per riempire un chip del bioanalyzer
+
+Testare su 4 condizioni:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \emph{O. maius} Zn (Controllo)\\
+\item
+  \emph{O. maius} A (Controllo)\\
+\item
+  \emph{O. maius} Zn 25uM\\
+\item
+  \emph{O. maius} Zn 50uM
+\end{enumerate}
+
+Testare 2 protocolli di estrazione di RNA da funghi e 1 protocollo di estrazione da piante
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \href{https://www.mn-net.com/media/pdf/a4/03/d2/Instruction-NucleoSpin-RNA-Plant-and-Fungi.pdf\#page=15\&zoom=auto,-218,581}{NucleoSpin RNA Plant and Fungi}
+\end{enumerate}
+
+Per i funghi e piante
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  \href{\%22https://www.qiagen.com/us/products/discovery-and-translational-research/dna-rna-purification/rna-purification/total-rna/rneasy-plant-mini-kit/\%22}{RNeasy Plant Mini Kit}
+\end{enumerate}
+
+Solo per funghi
+
+\hypertarget{nucleospin-rna-plant-and-fungi}{%
+\subsubsection{\texorpdfstring{\href{protocols/Instruction-NucleoSpin-RNA-Plant-and-Fungi.pdf}{NucleoSpin RNA Plant and Fungi}}{NucleoSpin RNA Plant and Fungi}}\label{nucleospin-rna-plant-and-fungi}}
+
+Usato protocollo con beads e con azoto liquido.
+
+Nel protocollo con beads non abbiamo usato il PFN buffer, mentre l'abbiamo usato con il mortaio e pesterllo.
+
+\hypertarget{D20220208}{%
+\section{20220208}\label{D20220208}}
+
+\hypertarget{meeting-con-olivier-friard-per-parlare-del-c3s-occam}{%
+\subsection{Meeting con Olivier Friard per parlare del C3S OCCAM}\label{meeting-con-olivier-friard-per-parlare-del-c3s-occam}}
+
+\hypertarget{esami-biologia-delle-interazioni}{%
+\subsection{Esami Biologia delle interazioni}\label{esami-biologia-delle-interazioni}}
+
+\hypertarget{D20220209}{%
+\section{20220209}\label{D20220209}}
+
+\hypertarget{esami-biologia-delle-interazioni-1}{%
+\subsection{Esami Biologia delle interazioni}\label{esami-biologia-delle-interazioni-1}}
+
+\hypertarget{meeting-con-olivier-friard-per-capire-come-usare-occam}{%
+\subsection{Meeting con Olivier Friard per capire come usare OCCAM}\label{meeting-con-olivier-friard-per-capire-come-usare-occam}}
+
+\hypertarget{D20220218}{%
+\section{20220218}\label{D20220218}}
+
+\hypertarget{riunione-con-simone}{%
+\subsection{Riunione con Simone}\label{riunione-con-simone}}
+
+Realizzato poco, aspettare che Simone carichi i dati e contatti Ekaterina.
+
+Capire poi con lei se rifare la figura con una lista di PKS più aggiornata.
+
+\hypertarget{D20220222}{%
+\section{20220222}\label{D20220222}}
+
+\hypertarget{riunione-con-miriana}{%
+\subsection{Riunione con Miriana}\label{riunione-con-miriana}}
+
+Riunione con Miriana per decidere cosa fare in settimana
+
+\hypertarget{D20220223}{%
+\section{20220223}\label{D20220223}}
+
+\hypertarget{piastre-interazione-con-chiara}{%
+\subsection{Piastre interazione con Chiara}\label{piastre-interazione-con-chiara}}
+
+L'altra volta abbiamo sbagliato! Prima si mette \emph{O. maius} e dopo due settimana si aggiunge il fungo antagonismo (Tutte le piastre di controllo con solo \emph{O. maius} possono essere data a Miriana Bortolot).
 
 \hypertarget{progetto-pks}{%
 \chapter{Progetto PKS}\label{progetto-pks}}
